# interactive-computer-graphics-learning

./: Cargo.toml  index.html  index.scss
src/: main.rs  routes.rs
src/pages/: home.rs  mod.rs  sierpinski.frag  sierpinski.rs  sierpinski.vert
src/utils/: mod.rs  vector.rs  webgl_utils.rs
