[package]
name = "interactive-computer-graphics-learning"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.18"
yew-router = "0.15.0"
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
web-sys = "0.3.44"
features = [
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
]
